use an html comment for the summary

--- a/source/blog/2012-03-07-mcucsaop.md
+++ b/source/blog/2012-03-07-mcucsaop.md
@@ -5,15 +5,15 @@ title: MCUCSAOP
 Programming is full of acronyms:
 [KISS](http://en.wikipedia.org/wiki/KISS_principle).
 [TDD](http://en.wikipedia.org/wiki/Test-driven_development).
-[OOP](http://en.wikipedia.org/wiki/Object-oriented_programming) .
-[YAGNI](http://en.wikipedia.org/wiki/You_ain't_gonna_need_it) .
-
--MORE-
+[OOP](http://en.wikipedia.org/wiki/Object-oriented_programming).
+[YAGNI](http://en.wikipedia.org/wiki/You_ain't_gonna_need_it).
 
 In other cases there are short idioms for common concepts: [Premature
 optimization is the Root of All
 Evil](http://c2.com/cgi/wiki?PrematureOptimization) and [GOTO considered
-harmful](http://c2.com/cgi/wiki?GotoConsideredHarmful)
+harmful](http://c2.com/cgi/wiki?GotoConsideredHarmful).
+
+<!-- MORE -->
 
 Well, here’s one little programming principle for which I have not found
 a popular acronym or short idiom:
